--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "^0.17.1"
+    "react-native-web": "^0.17.1",
+    "validate-js": "^2.0.1",
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
