--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@react-navigation/native-stack": "^6.1.0",
     "date-fns": "^2.23.0",
     "expo": "~42.0.1",
+    "expo-constants": "~11.0.1",
+    "expo-image-picker": "~10.2.2",
+    "expo-permissions": "~12.1.1",
     "expo-status-bar": "~1.0.4",
+    "install": "^0.13.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
