--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "axios": "^0.21.4",
     "date-fns": "^2.23.0",
     "expo": "~42.0.1",
+    "expo-av": "~9.2.3",
     "expo-constants": "~11.0.1",
     "expo-image-picker": "~10.2.2",
     "expo-permissions": "~12.1.1",
+    "expo-screen-orientation": "^3.2.1",
     "expo-status-bar": "~1.0.4",
     "install": "^0.13.0",
     "react": "16.13.1",
@@ -34,8 +36,7 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.17.1",
     "validate-js": "^2.0.1",
-    "validate.js": "^0.13.1",
-    "expo-av": "~9.2.3"
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
